--- a/DevIOAutoLayout/Lesson2Answer.storyboard
+++ b/DevIOAutoLayout/Lesson2Answer.storyboard
@@ -23,7 +23,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="85C-x7-X2C" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="1200"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="infinite" image="lesson2_photo" translatesAutoresizingMaskIntoConstraints="NO" id="1Bv-PS-Pkx">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="infinite" image="lesson2_photo" translatesAutoresizingMaskIntoConstraints="NO" id="1Bv-PS-Pkx">
                                                 <rect key="frame" x="0.0" y="20" width="600" height="280"/>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UHM-Pc-Yqa" userLabel="Sub View">
